messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  type: ClusterIP
  selector:
    app: django-app
    version: blue  # Controls active deployment
  ports:
    - port: 8000
      targetPort: 8000
